Milestone 2, Data cleaning

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+sample_accidents.csv
+US_Accidents_Dec20_Updated.csv
+Accidents Data Analysis.docx
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
